build_logs.txt
C:\Users\olik\Desktop\Hytale\Plugins\HytalePortal\src\main\java\dev\jsemolik\hytaleportal\listeners\PortalTeleportListener.java:133: error: cannot find symbol
        Vector3i[] framePositions = portal.getFramePositions();
        ^
  symbol:   class Vector3i
  location: class PortalTeleportListener
C:\Users\olik\Desktop\Hytale\Plugins\HytalePortal\src\main\java\dev\jsemolik\hytaleportal\listeners\PortalTeleportListener.java:137: error: cannot find symbol
        for (Vector3i blockPos : framePositions) {
             ^
  symbol:   class Vector3i
  location: class PortalTeleportListener
